--- a/sampleapp/app/src/main/res/layout/content_scrolling.xml
+++ b/sampleapp/app/src/main/res/layout/content_scrolling.xml
@@ -5,13 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".view.ScrollingActivity"
-    tools:showIn="@layout/activity_scrolling">
+    tools:context=".view.ToDoListActivity"
+    tools:showIn="@layout/activity_todo_list">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:text="@string/large_text" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </androidx.core.widget.NestedScrollView>
