--- a/sampleapp/app/src/main/res/layout/activity_todo_list.xml
+++ b/sampleapp/app/src/main/res/layout/activity_todo_list.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="viewModel"
-            type="com.github.jacubsz.sampleapp.viewmodel.EmptyViewModel" />
+            type="com.github.jacubsz.sampleapp.viewmodel.ToDoListViewModel" />
 
     </data>
 
@@ -43,7 +43,9 @@
             </com.google.android.material.appbar.CollapsingToolbarLayout>
         </com.google.android.material.appbar.AppBarLayout>
 
-        <include layout="@layout/content_scrolling" />
+        <include
+            android:id="@+id/nested_view"
+            layout="@layout/content_scrolling" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab"
