--- a/sampleapp/app/src/main/res/layout/activity_add_new_todo_item.xml
+++ b/sampleapp/app/src/main/res/layout/activity_add_new_todo_item.xml
@@ -38,7 +38,7 @@
             android:layout_marginTop="@dimen/text_margin"
             android:layout_marginEnd="@dimen/text_margin"
             android:hint="@string/add_new_todo_item_hint"
-            android:text="@{viewModel.content}"
+            android:text="@={viewModel.content}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textview_header" />
