--- a/sampleapp/app/src/main/res/layout/item_todo.xml
+++ b/sampleapp/app/src/main/res/layout/item_todo.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="item"
-            type="com.github.jacubsz.sampleapp.businesslogiccentre.model.ToDoItem" />
+            type="com.github.jacubsz.sampleapp.listadapter.ToDoItemsRecyclerViewAdapter.ViewHolder" />
 
     </data>
 
@@ -18,6 +18,7 @@
             android:id="@+id/checkbox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:checked="@={item.checked}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
