--- a/sampleapp/app/src/main/res/layout/content_scrolling.xml
+++ b/sampleapp/app/src/main/res/layout/content_scrolling.xml
@@ -3,17 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.core.widget.NestedScrollView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview_items"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:context=".view.ToDoListActivity"
-        tools:showIn="@layout/activity_todo_list">
+        tools:showIn="@layout/activity_todo_list" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerview_items"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-    </androidx.core.widget.NestedScrollView>
 </layout>
