--- a/sampleapp/app/src/main/res/layout/activity_todo_list.xml
+++ b/sampleapp/app/src/main/res/layout/activity_todo_list.xml
@@ -55,7 +55,7 @@
             android:contentDescription="@string/fab_content_description"
             app:layout_anchor="@id/app_bar"
             app:layout_anchorGravity="bottom|end"
-            app:srcCompat="@android:drawable/ic_dialog_email" />
+            app:srcCompat="@android:drawable/ic_input_add" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
