--- a/sampleapp/app/src/main/res/layout/activity_add_new_todo_item.xml
+++ b/sampleapp/app/src/main/res/layout/activity_add_new_todo_item.xml
@@ -25,23 +25,37 @@
             android:layout_marginEnd="@dimen/text_margin"
             android:layout_marginBottom="@dimen/text_margin"
             android:text="@string/add_new_todo_item"
-            app:layout_constraintBottom_toTopOf="@id/edittext_new_item_content"
+            app:layout_constraintBottom_toTopOf="@id/textinputlayout_new_item"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <EditText
-            android:id="@+id/edittext_new_item_content"
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/textinputlayout_new_item"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/text_margin"
             android:layout_marginTop="@dimen/text_margin"
             android:layout_marginEnd="@dimen/text_margin"
-            android:hint="@string/add_new_todo_item_hint"
-            android:text="@={viewModel.content}"
+            app:errorEnabled="true"
+            app:errorText="@{viewModel.errorMessage}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textview_header" />
+            app:layout_constraintTop_toBottomOf="@id/textview_header">
+
+            <EditText
+                android:id="@+id/edittext_new_item_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/text_margin"
+                android:layout_marginTop="@dimen/text_margin"
+                android:layout_marginEnd="@dimen/text_margin"
+                android:hint="@string/add_new_todo_item_hint"
+                android:inputType="textAutoComplete"
+                android:text="@={viewModel.content}" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/button_add_new_item"
@@ -51,7 +65,7 @@
             android:text="@string/add_new_item_button_label"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/edittext_new_item_content" />
+            app:layout_constraintTop_toBottomOf="@id/textinputlayout_new_item" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
